--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -47,90 +47,15 @@
 /*
 --------------------------- only used in the Arcade room in jackson's res
 */
-.title_info_arcade{
-    z-index: 10;
-    grid-column: 2/13;
-    grid-row: 1/2;
 
-    height: 100%;
-    width: 100%;
 
-    display: grid;
-    grid-template-columns: repeat(11,1fr);
-    grid-template-rows: repeat(2,1fr);
-    position: absolute;
-    
 
-  
 
-}
-.arcade_title{
-    grid-column: 4/8;
-    font-weight: 100;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0%;
-}
 
-.tv_section_1_div{
-    grid-row: 2;
-    grid-column: 2/4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-}
-
-.tv_section_2_div{
-    grid-row: 2;
-    grid-column: 4/6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-}
-
-.tv_section_3_div{
-    grid-row: 2;
-    grid-column: 6/8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-}
-
-.tv_section_4_div{
-    grid-row: 2;
-    grid-column: 8/10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-}
 
    
 
 
-
-.title_info_arcade .room_home_corner{
-    grid-column: 11/12;
-    grid-row: 1/3;
-}
-
-.title_info_arcade .btn_square{
-    width: 95%;
-    background-color: rgb(70, 70, 70);
-}
-    .title_info_arcade .btn_square p{
-        font-size: x-large;
-    }
 
 
 
@@ -151,9 +76,7 @@
     align-items: center;
     border-radius: 15px;
 }
-    #arcade_special .generic_media_container{
-        grid-column: 2/12;
-    }
+   
 
  
 
@@ -1149,7 +1072,7 @@
             height: 105%;
     
             display: flex;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
             padding-bottom: 10px;
             border-bottom: solid 1px white;
@@ -1420,6 +1343,20 @@
             #mobile_display_none{
                 display: none;
             }
+
+            .media_1_img_display img{
+                height: 3rem;
+            }
+
+            .media_3_img_display img{
+                height: 3rem;
+            }
+            .media_4_img_display img{
+                height: 3rem;
+            }
+            .media_5_img_display img{
+                height: 3rem;
+            }
         }
 
 
@@ -1641,7 +1578,7 @@
             height: 105%;
     
             display: flex;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
             padding-bottom: 10px;
             border-bottom: solid 1px white;
