--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -133,15 +133,10 @@
 
 
     #active_source{
-        background-color: rgba(255, 255, 255);
+        background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(9, 99, 235) 100%);
+        backdrop-filter: blur(0px);
     }
-        #active_source p{
-            color: black;
-        }
-        #active_source img{
-            filter: invert(0);
-        }
-    
+       
 
 
 
