--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -1,5 +1,45 @@
 
 
+.switch_user_div{
+    grid-column: 4/7;
+    grid-row: 2;
+    z-index: 10;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.switch_user_div .btn_circle{
+   
+    width:8rem;
+    height: 3.25rem;
+    border-radius: 50px;
+}
+#switch_user{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    height: 75%;
+    border-radius: 35px;
+    background-color: rgb(40,40,40);   
+    box-shadow: 0px 0px 10px black; 
+}
+    a{
+        text-decoration: none;
+    }
+    #switch_user p{
+        padding: 0%;
+        margin: 0%;
+        text-decoration: none;
+    }
+    #music_user{
+        text-decoration: none;
+        font-size: x-large;    
+        border-bottom: solid 1px lightgray ;
+    }
+
 .transport_button .back_button_image{
     filter: none;
 }
@@ -523,20 +563,14 @@
         z-index: 50;
         height: 14rem;
         width: 23rem;
+        overflow: hidden;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         grid-template-rows: repeat(5,1fr);
-
-
-
-      
-
-
-
         border-radius: 10px;
         background-color: rgb(70, 70, 70);
         border: solid 2px rgb(170, 170, 170);
-        box-shadow: 5px 5px 10px black;
+        box-shadow: inset 0px 0px 15px 2px rgb(0, 0, 0);
     }
         #active_zone{
             background-color: rgb(79, 125, 154);
@@ -545,17 +579,53 @@
         }
     .zone_title{
         grid-row: 1/3;
-        grid-column: 1/5;
+        grid-column: 2/4;
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        height: 100%;
         font-size: 1.6rem;
-       
     }
+        .zone_title p {
+            border-bottom: solid 1px rgb(255, 255, 255);
+        }
         
+    .zone_container_user_1{
+        grid-column: 1/2;
+        grid-row: 1/3;
+        border-top-left-radius: 10px;
+        border-bottom-right-radius: 20px;
+        background-color: rgb(40,40,40);
+        height: 80%;
+        width: 100%;
+        border-bottom: solid rgb(105, 105, 105) 1px;
+        border-right: solid rgb(105, 105, 105) 1px;
+        z-index: 2;
+        box-shadow: 3px 3px 15px rgb(0, 0, 0);
+    }
+
+         
+    .zone_container_user_2{
+        grid-column: 4/5;
+        grid-row: 1/3;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 20px;
+        background-color: rgb(40,40,40);
+        height: 80%;
+        width: 100%;
+        border-bottom: solid rgb(105, 105, 105) 1px;
+        border-left: solid rgb(105, 105, 105) 1px;
+        z-index: 2;
+        box-shadow: -3px 3px 15px rgb(0, 0, 0);
+    }
+
+        #active_user{
+            background-color: rgb(187, 44, 44);
+        }
         .zone_controls{
             grid-column: 1/5;
-            grid-row: 2/5;
+            grid-row: 4/6;
             width: 100%;
             display: flex;
             justify-content: space-evenly;
@@ -579,35 +649,16 @@
             .power_on_off{
                 width: 100%;
                 grid-column: 1/5;
-                grid-row: 5/6;
-
+                grid-row: 3/4;                
                 display: flex;
-                justify-content: center;
+                justify-content:center;
+                align-items: flex-start;
 
                 padding-bottom: 5px;
 
                
             }
-                .power_on{
-                    border-radius:10px ;
-                   
-                    background-color: rgb(55, 116, 75);
-                    text-align: center;
-                    border: none;
-                }
-                    .power_on p{
-                        font-size: large;
-                    }
-
-                .power_off{
-                    border-radius:10px ;
-                    border: none;
-
-                    background-color: rgb(153, 80, 80);
-                }
-                    .power_off p{
-                        font-size: large;
-                    }
+                
      
      
 
