--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -90,18 +90,20 @@
 }
 
 .btn_location_1{
-    height: 8.7rem;
-    width: 7.75rem;
+    height: 3.7rem;
+    width: 3.75rem;
     position: absolute;
-    left: 450px;
-    top: 315px;
+    left: 505px;
+    top: 375px;
     border-radius: 10px;
     border: none;
     background-color: transparent;
     
 }
     .light_icon_z1{
-
+        position: relative;
+        top: 5px;
+        left: 4px;
         background-color: rgb(243, 84, 84);;        
         height: 2.5rem;
         box-shadow: 0px 0px 10px;
@@ -111,8 +113,26 @@
     }
     
 .btn_location_2{
-    display: none;
+    background-color: transparent;
+    height: 4rem;
+    width: 6.5rem;
+    position: absolute;
+    left: 480px;
+    top: 305px;
+    border-radius: 10px;
+    border: none;
  }
+    .light_icon_z2{
+        position: relative;
+        background-color: rgb(243, 84, 84);;        
+        height: 2.5rem;
+        box-shadow: 0px 0px 10px;
+        border-radius: 100%;
+        left: -28px;
+        top: 20px;
+        
+
+    }
 
  .btn_location_3{
     background-color: transparent;
@@ -131,16 +151,17 @@
         height: 2.5rem;
         box-shadow: 0px 0px 10px;
         border-radius: 100%;
-        top: 32px;
+        top: 10px;
+        left: 0px;
         
     }
 
  .btn_location_4{
     height: 5rem;
-    width: 6.5rem;
+    width: 2.5rem;
     position: absolute;
-    left: 790px;
-    top: 370px;
+    left: 694px;
+    top: 510px;
     border-radius: 10px;
     border: none;
     background-color: transparent;
@@ -151,7 +172,8 @@
         height: 2.5rem;
         box-shadow: 0px 0px 10px;
         border-radius: 100%;
-        bottom: 20px;
+        right: 15px;
+       
         
         
     }
@@ -159,7 +181,7 @@
 
  .btn_location_5{
     height: 5.5rem;
-    width: 6rem;
+    width: 4rem;
     position: absolute;
     left: 621px;
     top: 545px;
@@ -175,16 +197,16 @@
         border-radius: 100%;
         
         position: relative;
-        right: 15px;
-        top: 55px;
+        right: 0px;
+        top: 15px;
     }
 
  .btn_location_6{
-    height: 5rem;
+    height: 3rem;
     width: 6.5rem;
     position: absolute;
-    left: 790px;
-    top: 460px;
+    left: 750px;
+    top: 520px;
     border-radius: 10px;
     border: none;
     background-color: transparent;
@@ -196,8 +218,9 @@
         border-radius: 100%;
         
         position: relative;
-        left: 75px;
-        bottom: 26px;
+        right: 32px;
+        bottom: 10px;
+     
     }
 
  .btn_location_7{
@@ -212,12 +235,13 @@
  }
     .light_icon_z7{
 
-background-color: rgb(243, 84, 84);;        height: 2.5rem;
+        background-color: rgb(243, 84, 84);;        height: 2.5rem;
         box-shadow: 0px 0px 10px;
         border-radius: 100%;
         
         position: relative;
-        left: 45px;
+        top: 6px;
+        left: -15px;
     }
 
  .btn_location_8{
@@ -232,12 +256,14 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
  }
     .light_icon_z8{
 
-background-color: rgb(243, 84, 84);;        height: 2.5rem;
+        background-color: rgb(243, 84, 84);;        
+        height: 2.25rem;
         box-shadow: 0px 0px 10px;
         border-radius: 100%;
         
         position: relative;
-        top: 25px; 
+        top: 4px; 
+        left: 2px;
     }
 
  .btn_location_9{
@@ -276,15 +302,15 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
         border-radius: 100%;
         
         position: relative;
-        top:45px;
+        top:10px;
         left: 5px; 
     }
  .btn_location_11{
     height: 5.5rem;
-    width: 5.5rem;
+    width: 4rem;
     position: absolute;
-    left: 365px;
-    top: 470px;
+    left: 405px;
+    top: 480px;
     border-radius: 10px;
     border: none;
     background-color: transparent;
@@ -296,8 +322,8 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
         border-radius: 100%;
         
         position: relative;
-        top:2px;
-        right: 45px; 
+        top:25px;
+        left:0px; 
     }
  .btn_location_12{
     height: 3.25rem;
@@ -375,18 +401,128 @@ background-color: rgb(243, 84, 84);;        height: 2.5rem;
  
 
  .btn_location_15{
-    display: none;
     height: 5.5rem;
-    width: 5.5rem;
+    width: 7.5rem;
     position: absolute;
-    left: 100px;
-    top: 300px;
+    left: 760px;
+    top: 570px;
     border-radius: 10px;
     border: none;
-  
+    background-color: transparent;
  }
+    .light_icon_z15{
+        background-color: rgb(243, 84, 84);
+        height: 2.5rem;
+        box-shadow: 0px 0px 10px;
+        border-radius: 100%;
+        position: relative;
+        top:10px;
+        right: 0px;
+    }
  
- 
+
+
+    .btn_location_16{
+        height: 7rem;
+        width: 14.65rem;
+        position: absolute;
+        left: 170px;
+        top: 440px;
+        border-radius: 10px;
+        border: none;
+        background-color: transparent;
+     }
+        .light_icon_z16{
+            background-color: rgb(243, 84, 84);
+            height: 2.5rem;
+            box-shadow: 0px 0px 10px;
+            border-radius: 100%;
+            position: relative;
+            top:35px;
+            right: 0px;
+        }
+     
+
+    .btn_location_17{
+        height: 3rem;
+        width: 14.65rem;
+        position: absolute;
+        left: 680px;
+        top: 155px;
+        border-radius: 10px;
+        border: none;
+        background-color: transparent;
+        }
+        .light_icon_z17{
+            background-color: rgb(243, 84, 84);
+            height: 2.5rem;
+            box-shadow: 0px 0px 10px;
+            border-radius: 100%;
+            position: relative;
+            top:-35px;
+            right: 55px;
+        }
+         
+        .btn_location_18{
+            height: 3rem;
+            width: 10rem;
+            position: absolute;
+            left: 680px;
+            top: 330px;
+            border-radius: 10px;
+            border: none;
+            background-color: transparent;
+            }
+            .light_icon_z18{
+                background-color: rgb(243, 84, 84);
+                height: 2.5rem;
+                box-shadow: 0px 0px 10px;
+                border-radius: 100%;
+                position: relative;
+                top:-35px;
+                right: 0px;
+            }
+
+            .btn_location_19{
+                height: 3rem;
+                width: 10rem;
+                position: absolute;
+                left: 435px;
+                top: 610px;
+                border-radius: 10px;
+                border: none;
+                background-color: transparent;
+                }
+                .light_icon_z19{
+                    background-color: rgb(243, 84, 84);
+                    height: 2.5rem;
+                    box-shadow: 0px 0px 10px;
+                    border-radius: 100%;
+                    position: relative;
+                    top:35px;
+                    right: -7px;
+                }
+             
+                .btn_location_20{
+                    height: 3rem;
+                    width: 16rem;
+                    position: absolute;
+                    left: 200px;
+                    top: 290px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: transparent;
+                    }
+                    .light_icon_z20{
+                        background-color: rgb(243, 84, 84);
+                        height: 2.5rem;
+                        box-shadow: 0px 0px 10px;
+                        border-radius: 100%;
+                        position: relative;
+                        top:2px;
+                        right: -55px;
+                    }
+     
  
 
  #lightZoneActive{
