--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -200,6 +200,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    box-sizing: border-box;
+    padding-right: 1rem;
 }
     .album_info_title{
         font-size: 2.5rem;
@@ -548,7 +551,7 @@
     .zone_menu{
 
         grid-column: 1/10;
-        grid-row:2/9;
+        grid-row:1/10;
        
         backdrop-filter: blur(20px);
         width: 100%;
@@ -616,6 +619,22 @@
         z-index: 2;
         box-shadow: 3px 3px 15px rgb(0, 0, 0);
     }
+        .zone_container_user_1 p{
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .zone_container_user_2 p{
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
 
          
     .zone_container_user_2{
@@ -684,14 +703,31 @@
         border-radius: 15px;
         grid-column: 2/9;
         grid-row: 2/9;
-        backdrop-filter: blur(25px);
+        backdrop-filter: blur(40px);
 
         display: grid;
         grid-template-columns: repeat(6,1fr);
         grid-template-rows: repeat(6,1fr);
+        position: relative;
+    }
+
+        .active_message::before{
+            content: " ";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(40, 40, 40);
+            opacity: 0.7;
+            z-index: 0;
+            border-radius: 20px;
     }
 
     .active_message_container{
+        z-index: 1;
         grid-column: 1/7;
         grid-row:2/6;
         display: flex;
@@ -704,9 +740,13 @@
         .active_message_container h1{
             font-weight: 100;
             width:70% ;
+            z-index: 1;
+
         }
 
     .active_message_buttons{
+        z-index: 1;
+
         width: 100%;
         height: 50%;
         display: flex;
@@ -716,6 +756,7 @@
 
 
     .volume_controls{
+    
         grid-row: 3/8;
         grid-column: 9/10;
         height: 100%;
@@ -737,6 +778,9 @@
             height: 100%;
             animation: quickAudio 1s
         }
+            .quickAudioControls .volume_mute_btn{
+                height: 22.5%;
+            }
             .quickAudioControls .zone_controls{
                 height: 100%;
                 display: flex;
@@ -823,8 +867,8 @@
                 grid-column: 1/11;
                 grid-row: 6/8;
                 width: 100%;
-
                 border-radius: 0%;
+         
             }
             .playback_controls{
                 grid-column: 1/11;
